apps/rocketchat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rocketchat
  labels:
    app.kubernetes.io/part-of: rocketchat
