apps/rocketchat/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-app
  namespace: rocketchat
spec:
  ports:
    - port: 3000
  selector:
    app: rocketchat-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-app
  namespace: rocketchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat-app
  template:
    metadata:
      labels:
        app: rocketchat-app
    spec:
      containers:
        - name: rocketchat
          image: registry.rocket.chat/rocketchat/rocket.chat:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: rocketchat-uploads
