apps/rocketchat/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-mongo
  namespace: rocketchat
spec:
  ports:
    - port: 27017
  clusterIP: None
  selector:
    app: rocketchat-mongo

---
apiVersion: v1
kind: StatefulSet
metadata:
  name: rocketchat-mongo
  namespace: rocketchat
spec:
  serviceName: "rocketchat-mongo"
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat-mongo
  template:
    metadata:
      labels:
        app: rocketchat-mongo
    spec:
      containers:
        - name: mongodb
          image: docker.io/bitnami/mongodb:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /bitnami/mongodb
      volumeClaimTemplates:
        - metadata:
            name: mongodb-data
          spec:
            accessModes: [ "ReadWriteOnce" ]
            resources:
              requests:
                storage: 8Gi
