apps/rocketchat/ingress.yaml
apiVersion: networking.k8s.io./v1
kind: Ingress
metadata: 
  name: rocketchat-ingress
  namespace: rocketchat
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts: 
        - chat.dev-andrew.com
      secretName: chat-tls
  rules:
    - host: chat.dev-andrew.com
      http:
        paths: /
        pathType: Prefix
        backend: 
          service:
            name: rocketchat-app
            port:
              number: 3000
